Fix soundboard vertical alignment

--- a/src/modules/main/channels/_rtc.scss
+++ b/src/modules/main/channels/_rtc.scss
@@ -40,6 +40,9 @@
             }
 
             .contents-3NembX{
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 font-size: 0;
                 svg{
                     margin-right: 0;
